<resources>
    <string name="app_name">دیجی شاپ</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی</string>
    <string name="profile">پروفایل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_text">Signup for see photos and videos from your friends</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_required">نام کاربری اجباری است</string>
    <string name="password_required">رمز اجباری است</string>
    <string name="failed">خطا در ارتباط با سرور</string>
    <string name="login_failed">نام کاربری و رمز عبور اشتباه هستند</string>
</resources>
